--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Www</title>
+  <title>MIT Chi Epsilon</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+  <%= yield :head %>
+  <link rel="stylesheet" content="text/css" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/css/bootstrap-combined.min.css">
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 </head>
 <body>
-
-<%= yield %>
-
+  <div class="navbar narrow navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <%= link_to "Chi Epsilon", home_index_path, class: "brand" %>
+        <ul class="nav">
+          <li>
+          <a href="/www//roster">Members</a>
+          </li>
+          <li>
+          <a href="constitution.pdf">Constitution</a>
+          </li>
+          <li>
+          <a href="/www//contact">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="container" style="margin-top:45px">
+    <%= yield %>
+  </div>
 </body>
 </html>
