--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :caption %><br />
-    <%= f.text_area :caption %>
+    <%= f.text_area :caption, rows: 5, cols: 20 %>
   </div>
   <div class="actions">
     <%= f.submit %>
