--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th></th>
     <th>Caption</th>
     <th></th>
     <th></th>
@@ -10,6 +11,7 @@
 
 <% @photos.each do |photo| %>
   <tr>
+    <td><%= image_tag photo.photo_attachment.url(:thumb) %></td>
     <td><%= photo.caption %></td>
     <td><%= link_to 'Show', photo %></td>
     <td><%= link_to 'Edit', edit_photo_path(photo) %></td>
