--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,6 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <%= image_tag @photo.photo_attachment.url %>
+</p>
+<p>
   <b>Caption:</b>
   <%= @photo.caption %>
 </p>
