Fixed the login stuff.

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -10,7 +10,7 @@
     <%= f.text_field :last_name %></div>
 
   <div><%= f.label :biography %><br />
-    <%= f.text_area :biography, rows: 7, cols: 10 %></div>
+    <%= f.text_area :biography %></div>
 
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
