--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,11 +28,11 @@
         <ul class="nav pull-right ">
           <% if user_signed_in? %>
             <li>
-              <%= link_to "Logout of #{current_user.first_name}", destroy_user_session_path, method: :delete %>
+              <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-primary" %>
             </li>
           <% else %>
             <li>
-              <%= link_to "Login", new_user_session_path %>
+              <%= button_to "Login", new_user_session_path, class: "btn btn-primary" %>
             </li>
           <% end %>
         </ul>
