Created an events model.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,7 @@
             <%= link_to "Members", members_index_path %>
           </li>
           <li>
-          <a href="constitution.pdf">Constitution</a>
-          </li>
-          <li>
-          <a href="/www//contact">Contact Us</a>
+            <%= link_to "Photo Gallery", photos_path %>
           </li>
         </ul>
         <ul class="nav pull-right ">
