--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :date %><br />
-    <%= f.date_select :date %>
+    <%= f.datetime_select :date %>
   </div>
   <div class="field">
     <%= f.label :location %><br />
@@ -25,7 +25,7 @@
   </div>
   <div class="field">
     <%= f.label :description %><br />
-    <%= f.text_area :description %>
+    <%= f.text_area :description, rows: 5 %>
   </div>
   <div class="actions">
     <%= f.submit %>
