--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,7 @@
+<div class="span4 pull-right">
+  <h1>Upcoming Events</h1>
+</div>
+
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
