--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
           <li>
             <%= link_to "Photo Gallery", photos_path %>
           </li>
+          <li>
+            <%= link_to "Events", events_path %>
+          </li>
         </ul>
         <ul class="nav pull-right ">
           <% if user_signed_in? %>
